--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "ODIyNjYzODc1OTQ1MTY4OTA2.YFVjcA.oYjf6PsJpoxALsb6KrGl3jjPfbo",
-  "dono": "817160910871330836",
-  "prefix": "y.",
+  "token": "ODI5OTEzNjQyNjY5NTcyMTU1.YG_DTw.nfNc4tBUL79xDXcha4BbxiPKjnk",
+  "dono": "767169424503078923",
+  "prefix": "s.",
   "status": "Ligando..."
 }
